--- a/Drug Map/index.html
+++ b/Drug Map/index.html
@@ -2,29 +2,15 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script> 
-  <script type="text/javascript" src="js/jquery.tipsy.js"></script>
   <link href="css/tipsy.css" rel="stylesheet" type="text/css" />
-
-<!-- Load the d3 library. -->
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="js/datamaps.usa.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-</head>
+  </head>
 
 
 <body>
 
   <!-- The SVG element will go in here -->
   <h1>Monthly Comparison of 2012 Illicit Drug Use by People 12 and Older </h1>
-  <p>
-    This project used D3 interactive maps to explore and find correlations between drug usage throughout the U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and attempted to find any relationship between them. 
-  </p>
-  <p>
-    From our graphs, we concluded that obesity and drug usage have a negative relationship. Additionally there is a slight positive relationship with median income and drug usage. We did not find much of a relationship with property crime or violent crime which could be a because the range of crime is very low.
-  </p>
+  
 
   <div class= "map_container_1">
     <div id="map_container1">
@@ -79,47 +65,7 @@
     </div>
   </div>
 
-  <div class= "map_container_2">
-    <div id="map_container2">
-      <div id="map2"></div>
-    </div>
-
-    <div class = "slider_container">
-      <div class="range-slider">
-          <input class="input-range" type="range" min ="0" max="8" step ="1" value ="1" oninput = "DrawGraph(this.value,map2)">
-      </div> 
-
-      <div class="button_container">
-        <div class="drug_button">
-          Drug Usage in the Past Month
-        </div>
-        <div class="income_button">
-          Median Income
-        </div>
-        <div class="obesity_button">
-          Obesity
-        </div>
-        <div class="hard_drugs_button">
-          Hard Drugs
-        </div>
-        <div class="marijuana_button">
-          Marijuana
-        </div>
-        <div class="tobacco_button">
-          Tobacco
-        </div>
-        <div class="alcohol_button">
-          Alcohol
-        </div>
-        <div class="violent_crime_button">
-          Violent Crime
-        </div>
-        <div class="property_crime_button">
-          Property Crime
-        </div>
-      </div>
-    </div>
-  </div>
+  <hr>
 
   <h1>State Bubble Chart Overview of Different Factors</h1>
   <div class = "bubble_slider_container">
@@ -148,11 +94,27 @@
     </div>
   </div>
   <div id = "bubble_chart"></div>
-  <div id = "bar_chart">
+  <hr>
+  <div id = "bar_chart" class='bar_graph_container'>
     <h1>Regional Bar Chart Overview of Different Factors</h1>
   </div>
+  <p>
+    From our graphs, we concluded that obesity and drug usage have a negative relationship. Additionally there is a slight positive relationship with median income and drug usage. We did not find much of a relationship with property crime or violent crime which could be a because the range of crime is very low.
+  </p>
   <!-- D3 code is executed here -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script> 
+  <script type="text/javascript" src="js/jquery.tipsy.js"></script>
+
+<!-- Load the d3 library. -->
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="js/datamaps.usa.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+
+
   <script src="js/preprocessData.js"></script>
   <script src="js/draw.js"></script>
+
 </body>
 </html>
