--- a/drug_map/index.html
+++ b/drug_map/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="css/tipsy.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -110,10 +110,10 @@
 <script type="text/javascript" src="js/jquery.tipsy.js"></script>
 
 <!-- Load the d3 library. -->
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="js/datamaps.usa.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
 
 <script src="js/preprocessData.js"></script>
